--- a/factory-method.csproj
+++ b/factory-method.csproj
@@ -44,6 +44,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Archer.cs" />
+    <Compile Include="ArcherFactory.cs" />
+    <Compile Include="CavalryFactory.cs" />
     <Compile Include="Cavalry.cs" />
     <Compile Include="Infantry.cs" />
     <Compile Include="InfantryFactory.cs" />
